<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="vertical"
                tools:context="com.example.android.courtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_basketball"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/away"
                android:textColor="@color/white"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="zeroTeamA"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="60sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:onClick="add3TeamA"
                android:text="@string/_3_points"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:onClick="add2TeamA"
                android:text="@string/_2_points"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:onClick="add1TeamA"
                android:text="@string/free_throw"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="zeroTeamB"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="60sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="add3TeamB"
                android:text="@string/_3_points"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="add2TeamB"
                android:text="@string/_2_points"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="add1TeamB"
                android:text="@string/free_throw"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/winnerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/winnerbg"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/the_winnner_is"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/itsOver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@color/green"
        android:onClick="pickWinnter"
        android:padding="10dp"
        android:text="@string/time_is_over"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="#000"/>

</RelativeLayout>